--- a/src/insidefx/ibreed/alert/AlertDialog.fxml
+++ b/src/insidefx/ibreed/alert/AlertDialog.fxml
@@ -15,7 +15,7 @@
         <Image url="@AlertDialog.png" />
       </image>
     </ImageView>
-    <Button id="okButton" defaultButton="true" minWidth="80.0" mnemonicParsing="false" onAction="#handleOkButton" text="%button.ok" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="14.0" />
+    <Button id="okButton" cancelButton="true" defaultButton="true" minWidth="80.0" mnemonicParsing="false" onAction="#handleOkButton" text="%button.ok" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="14.0" />
     <TextArea id="alertText" fx:id="alertTextArea" editable="false" focusTraversable="false" minWidth="30.0" prefHeight="103.0" prefWidth="401.0" wrapText="true" AnchorPane.bottomAnchor="53.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
   </children>
 </AnchorPane>
