--- a/src/insidefx/ibreed/ibreed.fxml
+++ b/src/insidefx/ibreed/ibreed.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import java.net.*?>
 <?import java.util.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.web.*?>
 
-<BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="350.0" minWidth="500.0" prefHeight="450.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml">
+<BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="350.0" minWidth="500.0" prefHeight="510.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml">
   <center>
     <WebView fx:id="webView" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="640.0">
       <BorderPane.margin>
@@ -16,6 +17,16 @@
       </BorderPane.margin>
     </WebView>
   </center>
+  <right>
+    <Label fx:id="dragMeFX" alignment="CENTER_RIGHT" maxHeight="64.0" maxWidth="128.0" onDragDetected="#handleDragDetected" onDragDropped="#handleDragDropped" onMouseDragged="#handleOnMouseDragged" prefHeight="64.0" prefWidth="128.0" styleClass="dragme-button" text="Drag Me!" textAlignment="LEFT" BorderPane.alignment="BOTTOM_CENTER">
+      <stylesheets>
+        <URL value="@ibreed.css" />
+      </stylesheets>
+      <BorderPane.margin>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </BorderPane.margin>
+    </Label>
+  </right>
   <top>
     <TextField fx:id="urlTxt" onAction="#onUrlTxtChanged" prefWidth="200.0">
       <BorderPane.margin>
