--- a/src/insidefx/ibreed/ibreed.fxml
+++ b/src/insidefx/ibreed/ibreed.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.web.*?>
 
 <BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="350.0" minWidth="500.0" prefHeight="510.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml">
@@ -17,16 +18,30 @@
       </BorderPane.margin>
     </WebView>
   </center>
-  <right>
-    <Label fx:id="dragMeFX" alignment="CENTER_RIGHT" maxHeight="64.0" maxWidth="128.0" onDragDetected="#handleDragDetected" onDragDropped="#handleDragDropped" onMouseDragged="#handleOnMouseDragged" prefHeight="64.0" prefWidth="128.0" styleClass="dragme-button" text="Drag Me!" textAlignment="LEFT" BorderPane.alignment="BOTTOM_CENTER">
-      <stylesheets>
-        <URL value="@ibreed.css" />
-      </stylesheets>
-      <BorderPane.margin>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </BorderPane.margin>
-    </Label>
-  </right>
+  <left>
+    <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
+      <children>
+        <Label fx:id="dragMeFX" alignment="CENTER_RIGHT" maxHeight="64.0" maxWidth="128.0" onDragDetected="#handleDragDetected" onDragDone="#handleDragDone" onDragDropped="#handleDragDropped" onMouseDragged="#handleOnMouseDragged" prefHeight="64.0" prefWidth="128.0" styleClass="dragme-button" text="Drag Me!" textAlignment="LEFT" VBox.vgrow="NEVER">
+          <stylesheets>
+            <URL value="@ibreed.css" />
+          </stylesheets>
+          <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" fx:id="x1" />
+          </VBox.margin>
+        </Label>
+        <Rectangle fx:id="rectKeyUp" arcHeight="16.0" arcWidth="200.0" fill="WHITE" height="40.0" smooth="true" stroke="BLACK" strokeType="INSIDE" width="50.0" VBox.vgrow="NEVER">
+          <VBox.margin>
+            <Insets bottom="5.0" left="20.0" right="5.0" top="5.0" />
+          </VBox.margin>
+        </Rectangle>
+        <Button fx:id="btnHit" mnemonicParsing="false" onAction="#onHitClicked" text="Hit!">
+          <VBox.margin>
+            <Insets bottom="5.0" left="20.0" right="5.0" top="5.0" />
+          </VBox.margin>
+        </Button>
+      </children>
+    </VBox>
+  </left>
   <top>
     <TextField fx:id="urlTxt" onAction="#onUrlTxtChanged" prefWidth="200.0">
       <BorderPane.margin>
