--- a/src/demoapp/ibreedskeleton.fxml
+++ b/src/demoapp/ibreedskeleton.fxml
@@ -21,7 +21,7 @@
   <left>
     <VBox prefHeight="448.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
       <children>
-        <TextArea editable="false" prefWidth="200.0" text="This is a hybrid application (iBreed) example.&#10;&#10;Chrome's stage are managed by Undecorator." wrapText="true" VBox.vgrow="ALWAYS" />
+        <TextArea editable="false" prefWidth="200.0" text="This is a hybrid application (iBreed) example.&#10;&#10;Stage's chrome is managed by Undecorator." wrapText="true" VBox.vgrow="ALWAYS" />
       </children>
       <BorderPane.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
